--- a/style.css
+++ b/style.css
@@ -72,20 +72,25 @@ body {
 }
 
 .container {
-    margin: 1.5em;
-    height: 28em;
+    margin-left: 1.5em;
+    margin-right: 1.5em;
+    margin-top: 1.5em;
+    height: 30em;
     background-color: white;
 }
 
-#perfectgift {
-    padding-top: 2em;
-    margin-left: 5em;
+.text {
     font-family: Arial, Helvetica, sans-serif;
     font-size: small;
     font-weight: 500;
+    padding-top: 2em;
 }
 
-#shopnow {
+#perfectgift {
+    margin-left: 5em;
+}
+
+.shop {
     font-size: smaller;
     margin-left: 2em;
     text-decoration: none;
@@ -97,6 +102,7 @@ body {
 
 .prodotti {
     margin: 2em;
+    margin-top: 1.6em;
 }
 
 .prodotto {
@@ -104,7 +110,7 @@ body {
     margin-left: 2em;
     background-size: cover;
     border-radius: 10px;
-    height: 22em;
+    height: 25em;
     width: 18em;
     box-shadow: 4px 4px 4px lightgray;
     display: inline-block;
@@ -129,4 +135,22 @@ body {
 #pet {
     background-image: url(assets/img_4.jpg);
     background-position: center;
+}
+
+#visore {
+    background-image: url(assets/img_9.png);
+    background-size: cover;
+    cursor: pointer;
+    margin-bottom: 0.7em;
+}
+
+.center {
+    text-align: center;
+}
+
+#headphones {
+    background-image: url(assets/img_10.png);
+    background-size: cover;
+    cursor: pointer;
+    margin-bottom: 0.7em;
 }
