--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ body {
     background-color: #E9EDEE;
 }
 
-#orangecontainer {
+.orangecontainer {
     margin: 1.5em;
     height: 1.5em;
     background-color: #F66405;
@@ -52,6 +52,7 @@ body {
     align-items: center;
     justify-content: space-evenly;
     flex-direction: column;
+    cursor: pointer;
 }
 
 .gift {
@@ -75,19 +76,21 @@ body {
     margin-left: 1.5em;
     margin-right: 1.5em;
     margin-top: 1.5em;
-    height: 30em;
+    height: 32em;
     background-color: white;
+    position: relative;
 }
 
 .text {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: small;
+    font-size: medium;
     font-weight: 500;
-    padding-top: 2em;
+    padding-top: 1.5em;
 }
 
 #perfectgift {
-    margin-left: 5em;
+    text-align: left;
+    padding-left: 6.5em;
 }
 
 .shop {
@@ -100,14 +103,17 @@ body {
     cursor: pointer;
 }
 
-.prodotti {
-    margin: 2em;
-    margin-top: 1.6em;
+#prodotti {
+    text-align: center;
+    margin-left: 1.5em;
+    margin-right: 1.5em;
+    margin-top: 1.5em;
+    height: 32em;
+    background-color: white;
+    height: auto;
 }
 
 .prodotto {
-    align-items: center;
-    margin-left: 2em;
     background-size: cover;
     border-radius: 10px;
     height: 25em;
@@ -115,6 +121,9 @@ body {
     box-shadow: 4px 4px 4px lightgray;
     display: inline-block;
     cursor: pointer;
+    margin: 2em;
+    margin-top: 1.6em;
+
 }
 
 #kindle {
@@ -153,4 +162,33 @@ body {
     background-size: cover;
     cursor: pointer;
     margin-bottom: 0.7em;
+}
+
+
+#lightbluecontainer {
+    background-color: #364759;
+    width: 100%;
+    height: 2.5em;
+    text-align: center;
+    margin-top: 2.5em;
+}
+
+.back {
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: small;
+    line-height: 2.5em;
+}
+
+#bluecontainer {
+    width: 100%;
+    background-color: #222F3F;
+    height: 7em;
+    text-align: center;
+}
+
+#bottomlogo {
+    height: 3em;
+    margin-top: 1.9em;
 }
